[package]
name = "dashing"
version = "0.0.1"
authors = ["igowen"]
license = "Apache-2.0"
publish = false
edition = "2018"
description = "ASCII-style roguelike engine"
repository = "https://github.com/igowen/dashing"
categories = ["games", "rendering::engine"]

[features]

[dependencies]
bytemuck = { version = "1.5.0", features = ["derive"] }
futures = "0.3"
wgpu = "0.8"
winit = "0.24"
log = "0.4.8"
time = "0.2"
itertools = "0.10.0"

[dev-dependencies]
hamcrest = "0.1.5"
image = "0.20"
png = "0.16"
pretty_env_logger = "0.4"
