[package]
name = "dashing"
version = "0.0.2"
authors = ["Ian Gowen <ian@gowen.cc>"]
license = "Apache-2.0"
publish = false
edition = "2021"
description = "ASCII-style roguelike engine"
repository = "https://github.com/igowen/dashing"
categories = ["game-development", "game-engines", "rendering::engine"]
resolver = "2"

[features]

[dependencies]
bytemuck = { version = "1.5.0", features = ["derive"] }
futures = "0.3"
wgpu = "0.11"
winit = "0.26"
log = "0.4.8"
time = "0.2"
itertools = "0.10.0"

[dev-dependencies]
hamcrest = "0.1.5"
image = "0.20"
png = "0.16"
pretty_env_logger = "0.4"
