[package]
name = "dashing"
version = "0.0.2"
authors = ["Ian Gowen <ian@gowen.cc>"]
license = "Apache-2.0"
publish = false
edition = "2021"
description = "ASCII-style roguelike engine"
repository = "https://github.com/igowen/dashing"
categories = ["game-development", "game-engines", "rendering::engine"]
resolver = "2"

[features]

[dependencies]
bytemuck = { version = "1.9.1", features = ["derive"] }
futures = "0.3.21"
futures-intrusive = "0.4"
wgpu = "0.13"
winit = "0.26.1"
log = "0.4.16"
time = "0.3.9"
itertools = "0.10.3"

[dev-dependencies]
image = "0.24.2"
png = "0.17.5"
pretty_env_logger = "0.4"
